classDiagram
    direction LR

    class User {
        +Id: UUID
        +FirstName: String
        +LastName: String
        +Email: String
        +Passwrod: String
        +BirthDate: Date
        +PhoneNum: Int
        +isAdmin: Boolean
        +isOwner: Boolean
        +Create_date: Datetime
        +Update_date: Datetime
        +Register()
        +Update_profile_info()
        +Delete_user()
        +Auth()
        +History()
    }

    class favorite {
        <<Association>>
        +isFavorite: Boolean
        +Create_favorite()
    }

    class Place {
        +Id: UUID
        +Title: String
        +Description: String
        +Availability: Boolean
        +Price: Float
        +latitude: Float
        +Longitude: Float
        +Create_date: Datetime
        +Update_date: Datetime
        +Create_place()
        +Update_place()
        +Delete_place()
        +List_place()
    }

    class Review {
        +Id: UUID
        +Rating: Float
        +Comment: String
        +Create_date: Datetime
        +Update_date: Datetime
        +Create_review()
        +Update_review()
        +Delete_review()
        +List_review()
    }

    class Amenities {
        +Id: UUID
        +Name: String
        +Description: String
        +Create_amenities()
        +Update_amenities()
        +Delete_amenities()
        +List_amenities()
    }

    %% Relationships and Multiplicities
    User "1" -- "0..*" Place
    User "1" -- "0..1" Review
    Place "0..1" -- "0..*" Review
    Place "*..1" --> "1..*" Amenities

    %% Workaround for the Association Class (favorite)
    User .. favorite
    favorite .. Place